--- a/index.html
+++ b/index.html
@@ -104,15 +104,13 @@
                     </p>
                 </div>
                 <div class="section-img" id="profilPhone">
-                    <img src="./images/signInHire.png" alt="">
+                    <img src="./images/profilHire.png" alt="">
                 </div>
 
             </div>
         </section>
 
         <section class="contact">
-
-
             <div class="contact-container">
                 <div class="contactImg-container">
                     <img src="./images/LogoWithoutBg.png" alt="">
