--- a/index.html
+++ b/index.html
@@ -19,18 +19,15 @@
         <img id="loader-logo" src="./images/logoHireRemoveBG.png" alt="Logo">
     </div> -->
 
-
-
-
-
     <nav>
         <div class="logo">
             <img src="./images/logoHireRemoveBG.png" alt="">
         </div>
 
         <div class="btnApp-container">
-            <button class="btnApp">Téléchargez l'application</button>
+            <a href="#download" class="btnApp">Téléchargez l'application</a>
         </div>
+
 
     </nav>
 
@@ -44,7 +41,8 @@
                 <img src="./images/hirePhone.png" alt="" id="hirePhone">
             </div>
             <div class="hero-content">
-                <h1>Hire, l'application mobile révolutionnaire qui met en relation employeurs et salariés !
+                <h1> <span>Hire</span>, l'application mobile révolutionnaire qui met en relation employeurs et salariés
+                    !
                 </h1>
                 <div class="container-badges">
                     <a href="#" target="_blank">
@@ -60,11 +58,28 @@
     </header>
 
 
+
+    <div class="cb-tagreel">
+        <div class="cb-tagreel-content">
+            <div class="cb-tagreel-items" role="marquee">
+                <div class="cb-tagreel-row">
+                    <div class="cb-tagreel-item"><span>Hire</span></div>
+                    <div class="cb-tagreel-item -stroke"><span>Hire</span></div>
+                    <div class="cb-tagreel-item"><span>Hire</span></div>
+                    <div class="cb-tagreel-item -stroke"><span>Hire</span></div>
+                    <div class="cb-tagreel-item"><span>Hire</span></div>
+                </div>
+            </div>
+        </div>
+    </div>
+
     <main>
+
         <section class="swipe">
             <div class="container-section">
                 <div class="section-content">
-                    <h2>Grâce au swipe, trouver du travail ou ton futur employé n'a jamais été aussi simple !
+                    <h2>Grâce au <span>swipe</span>, trouver du travail ou ton futur employé n'a jamais été aussi simple
+                        !
                     </h2>
                     <p>Fais glisser l'offre à droite si elle te plaît, et à gauche si c'est non. C'est super simple !
                     </p>
@@ -77,13 +92,28 @@
             </div>
         </section>
 
+        <div class="cb-tagreel">
+            <div class="cb-tagreel-content">
+                <div class="cb-tagreel-items" role="marquee">
+                    <div class="cb-tagreel-row">
+                        <div class="cb-tagreel-item"><span>Hire</span></div>
+                        <div class="cb-tagreel-item -stroke"><span>Hire</span></div>
+                        <div class="cb-tagreel-item"><span>Hire</span></div>
+                        <div class="cb-tagreel-item -stroke"><span>Hire</span></div>
+                        <div class="cb-tagreel-item"><span>Hire</span></div>
+                    </div>
+                </div>
+            </div>
+        </div>
+
         <section class="match inverted">
             <div class="container-section">
                 <div class="section-img" id="matchPhone">
                     <img src="./images/matchHire.png" alt="">
                 </div>
                 <div class="section-content">
-                    <h2>Ça a matché entre vous ? Contacte sans plus tarder ta potentielle future entreprise ou ton
+                    <h2>Ça a <span>matché</span> entre vous ? Contacte sans plus tarder ta future entreprise
+                        ou ton
                         nouvel employé !
                     </h2>
                     <p>Un match ouvre une nouvelle porte. Ne perds pas de temps et explore cette nouvelle opportunité
@@ -93,11 +123,26 @@
             </div>
         </section>
 
+        <div class="cb-tagreel">
+            <div class="cb-tagreel-content">
+                <div class="cb-tagreel-items" role="marquee">
+                    <div class="cb-tagreel-row">
+                        <div class="cb-tagreel-item"><span>Hire</span></div>
+                        <div class="cb-tagreel-item -stroke"><span>Hire</span></div>
+                        <div class="cb-tagreel-item"><span>Hire</span></div>
+                        <div class="cb-tagreel-item -stroke"><span>Hire</span></div>
+                        <div class="cb-tagreel-item"><span>Hire</span></div>
+                    </div>
+                </div>
+            </div>
+        </div>
+
 
         <section class="profil">
             <div class="container-section">
                 <div class="section-content">
-                    <h2>Une inscription simple et rapide pour cibler vos besoins et vous proposer la perle rare.
+                    <h2>Une inscription <span>simple</span> et <span>rapide</span> pour cibler vos besoins et vous
+                        proposer la perle rare.
                     </h2>
                     <p>Complétez votre profil en quelques minutes et découvrez des offres qui vous correspondent
                         vraiment.
@@ -110,7 +155,7 @@
             </div>
         </section>
 
-        <section class="contact">
+        <section class="contact" id="download">
             <div class="contact-container">
                 <div class="contactImg-container">
                     <img src="./images/LogoWithoutBg.png" alt="">
