--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 
     <nav>
         <div class="logo">
-            <img src="./images/logoHireRemoveBG.png" alt="">
+            <img src="./images/logoHireRemoveBG.png" alt="Logo de Hire">
         </div>
 
         <div class="btnApp-container">
@@ -38,7 +38,7 @@
 
         <div class="hero-section">
             <div class="hero-img">
-                <img src="./images/hirePhone.png" alt="" id="hirePhone">
+                <img src="./images/hirePhone.png" alt="Téléphone montrant l'application Hire" id="hirePhone">
             </div>
             <div class="hero-content">
                 <h1> <span>Hire</span>, l'application mobile révolutionnaire qui met en relation employeurs et salariés
@@ -85,8 +85,9 @@
                     </p>
                 </div>
                 <div class="section-img">
-                    <img src="./images/blankPhoneHire.png" alt="">
-                    <img src="./images/screenHireSwipe.png" alt="" id="screenHireSwipe">
+                    <img src="./images/blankPhoneHire.png" alt="Téléphone vide pour l'application Hire">
+                    <img src="./images/screenHireSwipe.png" alt="Capture d'écran de la fonction swipe de Hire"
+                        id="screenHireSwipe">
                 </div>
 
             </div>
@@ -109,7 +110,7 @@
         <section class="match inverted">
             <div class="container-section">
                 <div class="section-img" id="matchPhone">
-                    <img src="./images/matchHire.png" alt="">
+                    <img src="./images/matchHire.png" alt="Ecran montrant un match sur l'application Hire">
                 </div>
                 <div class="section-content">
                     <h2>Ça a <span>matché</span> entre vous ? Contacte sans plus tarder ta future entreprise
@@ -149,7 +150,7 @@
                     </p>
                 </div>
                 <div class="section-img" id="profilPhone">
-                    <img src="./images/profilHire.png" alt="">
+                    <img src="./images/profilHire.png" alt="Ecran de profil utilisateur sur l'application Hire">
                 </div>
 
             </div>
@@ -193,18 +194,23 @@
         </div> -->
 
         <div class="madeBy">
-            <div class="madeContent">
-
-                &copy; 2023 USV Hire
-                | Réalisé par <a class="monkey" href="https://monkeysdev.fr/"> <span>MonkeysDev</span>
-                </a>
+            <div class="contact-text">
+                <i class="fa-solid fa-envelope"></i>
+                <a href="mailto:?">matteo@hotmail.com</a>
             </div>
+            <hr>
+            <div>
+                <div class="madeContent">
+                    &copy; 2023 USV Hire
+                    | Réalisé par <a class="monkey" href="https://monkeysdev.fr/"> <span>MonkeysDev</span>
+                    </a>
+                </div>
 
-            <div class="law">
-                <a href="./mentionsLegales.html">Mentions légales -</a>
-                <a href="./politiqueConfidentialité.html">Politique de confidentialité</a>
+                <div class="law">
+                    <a href="./mentionsLegales.html">Mentions légales -</a>
+                    <a href="./politiqueConfidentialité.html">Politique de confidentialité</a>
+                </div>
             </div>
-        </div>
     </footer>
 
     <button id="backToTop" class="back-to-top"><i class="fa-solid fa-angle-up"></i></button>
