--- a/index.html
+++ b/index.html
@@ -201,7 +201,7 @@
             <hr>
             <div>
                 <div class="madeContent">
-                    &copy; 2023 USV Hire
+                    &copy; 2023 Hire
                     | Réalisé par <a class="monkey" href="https://monkeysdev.fr/"> <span>MonkeysDev</span>
                     </a>
                 </div>
