--- a/index.html
+++ b/index.html
@@ -10,14 +10,21 @@
     <script src="https://kit.fontawesome.com/8921e10786.js" crossorigin="anonymous"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.12.2/gsap.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.12.2/ScrollTrigger.min.js"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.9.1/SplitText.min.js"></script>
 
 </head>
 
 <body>
-    <!-- <div id="loader">
-        <img id="loader-logo" src="./images/logoHireRemoveBG.png" alt="Logo">
-    </div> -->
+    <div id="loader">
+        <div class="bar"></div>
+        <div class="bar"></div>
+        <div class="bar"></div>
+        <div class="bar"></div>
+        <div class="bar"></div>
+        <div class="bar"></div>
+
+        <!-- Ajoute autant de barres que tu veux -->
+        <img id="loader-logo" src="./images/LogoWithoutBg.png" alt="Logo">
+    </div>
 
     <nav>
         <div class="logo">
@@ -27,15 +34,11 @@
         <div class="btnApp-container">
             <a href="#download" class="btnApp">Téléchargez l'application</a>
         </div>
-
-
     </nav>
 
 
     <div id="diamond"></div>
     <header>
-
-
         <div class="hero-section">
             <div class="hero-img">
                 <img src="./images/hirePhone.png" alt="Téléphone montrant l'application Hire" id="hirePhone">
@@ -159,7 +162,7 @@
         <section class="contact" id="download">
             <div class="contact-container">
                 <div class="contactImg-container">
-                    <img src="./images/LogoWithoutBg.png" alt="">
+                    <img id="logoH" src="./images/LogoWithoutBg.png" alt="">
                 </div>
                 <div class="contact-content">
                     <h3>Pour trouver du travail, avez-vous pensé à aller voir <span>HIRE</span> ?</h3>
@@ -203,6 +206,7 @@
                 <div class="madeContent">
                     &copy; 2023 Hire
                     | Réalisé par <a class="monkey" href="https://monkeysdev.fr/"> <span>MonkeysDev</span>
+                    </a> et <a class="monkey" href="https://website.whalex.fr/"> <span>Whalex</span>
                     </a>
                 </div>
 
