--- a/index.html
+++ b/index.html
@@ -4,9 +4,14 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description"
+        content="Découvrez Hire, l'application mobile innovante qui révolutionne le recrutement. Un simple swipe pour connecter employeurs et salariés. Trouvez le match parfait pour votre carrière ou votre entreprise, avec une inscription rapide et des profils ciblés. Rejoignez Hire et explorez de nouvelles opportunités professionnelles dès aujourd'hui !">
+
     <title>Hire</title>
 
     <link rel="stylesheet" href="./style.css">
+    <link rel="icon" type="image/png" href="./images/Hire_Favicon2.png">
+
     <script src="https://kit.fontawesome.com/8921e10786.js" crossorigin="anonymous"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.12.2/gsap.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.12.2/ScrollTrigger.min.js"></script>
@@ -48,11 +53,11 @@
                     !
                 </h1>
                 <div class="container-badges">
-                    <a href="#" target="_blank">
+                    <a href="https://apps.apple.com/us/app/hire/id6474019778" target="_blank">
                         <img class="badges" src="./images/Download_on_the_App_Store_Badge_FR_RGB_blk_100517.svg"
                             alt="Disponible sur l'App Store">
                     </a>
-                    <a href="#" target="_blank">
+                    <a href="https://play.google.com/store/apps/details?id=com.mirai.hire" target="_blank">
                         <img class="badges" src="./images/google-play-badge.png" alt="Disponible sur Google Play">
                     </a>
                 </div>
@@ -168,11 +173,11 @@
                     <h3>Pour trouver du travail, avez-vous pensé à aller voir <span>HIRE</span> ?</h3>
                 </div>
                 <div class="container-badges contact-badges">
-                    <a href="#" target="_blank">
+                    <a href="https://apps.apple.com/us/app/hire/id6474019778" target="_blank">
                         <img class="badges" src="./images/Download_on_the_App_Store_Badge_FR_RGB_blk_100517.svg"
                             alt="Disponible sur l'App Store">
                     </a>
-                    <a href="#" target="_blank">
+                    <a href="https://play.google.com/store/apps/details?id=com.mirai.hire" target="_blank">
                         <img class="badges" src="./images/google-play-badge.png" alt="Disponible sur Google Play">
                     </a>
                 </div>
@@ -199,20 +204,20 @@
         <div class="madeBy">
             <div class="contact-text">
                 <i class="fa-solid fa-envelope"></i>
-                <a href="mailto:?">matteo@hotmail.com</a>
+                <a href="mailto:contact@hire-app.fr">contact@hire-app.fr</a>
             </div>
             <hr>
             <div>
                 <div class="madeContent">
                     &copy; 2023 Hire
-                    | Réalisé par <a class="monkey" href="https://monkeysdev.fr/"> <span>MonkeysDev</span>
-                    </a> et <a class="monkey" href="https://website.whalex.fr/"> <span>Whalex</span>
+                    | Réalisé par <a class="monkey" href="https://mirai-tech.fr/"> <span>Mirai-Tech</span>
+                    </a> et <a class="monkey" href="https://monkeysdev.fr/"> <span>MonkeysDev</span>
                     </a>
                 </div>
 
                 <div class="law">
                     <a href="./mentionsLegales.html">Mentions légales -</a>
-                    <a href="./politiqueConfidentialité.html">Politique de confidentialité</a>
+                    <a href="./politiqueConfidentialite.html">Politique de confidentialité</a>
                 </div>
             </div>
     </footer>
